--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
   "prisma": {
     "seed": "yarn rw exec seed"
   },
-  "packageManager": "yarn@3.7.0"
+  "packageManager": "yarn@3.7.0",
+  "dependencies": {
+    "@types/react-dropzone": "^5.1.0"
+  }
 }
