--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,5 @@
 # TEST_DATABASE_URL=file:./.redwood/test.db
 # PRISMA_HIDE_UPDATE_MESSAGE=true
 # LOG_LEVEL=trace
+# AWS_ACCESS_KEY_ID=
+# AWS_SECRET_ACCESS_KEY=
